--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,4 @@ project(cProject C)
 
 set(CMAKE_C_STANDARD 23)
 
-add_executable(cProject
-        exercise1/dweight.c
-        exercise1/celsius.c)
+add_executable(cProject exercise1/sphere.c)
